fix sidebar narrow when scrollbar appears

--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -388,6 +388,11 @@ Navbar vertical
             @include transition(transform $transition-time);
             overflow-x: auto;
             padding: 0;
+            scrollbar-width: none;
+
+            &::-webkit-scrollbar {
+              display: none;
+            }
 
             &.navbar-right {
               left: auto;
